--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -1,220 +1,189 @@
-
-
-
-
-
-
-.album__content-list__list{
-
-}//album__content-list__list--END--
-
+.album__content-list__list {
+} //album__content-list__list--END--
 
 .album__content-list__list__item {
     display: flex;
     gap: 8px;
     flex: 1;
     &.active {
-      .time {
-        background: #cf0 !important;
-        color: #222 !important;
-        gap: 8px;
-        width: 128px;
-        &::after {
-          content: "";
-          display: block;
-          width: 76px;
-          height: 16px;
-          background: url("../../assets/images/album/time-img-w.svg") center
-            no-repeat;
-          background-size: contain;
+        .time {
+            background: #cf0 !important;
+            color: #222 !important;
+            gap: 8px;
+            width: 128px;
+            &::after {
+                content: '';
+                display: block;
+                width: 76px;
+                height: 16px;
+                background: url('../../assets/images/album/time-img-w.svg') center no-repeat;
+                background-size: contain;
+            }
+            strong {
+                color: #222 !important;
+            }
         }
-        strong{
-          color: #222 !important;
-        }
-      }
     }
     .album__content-list__list__item__left {
-      border-radius: 16px;
-      background: #222;
-      width: 160px;
-      height: 160px;
-      padding: 10px;
-      position: relative;
-      .album__content-list__list__item__left__play-btn {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 42px;
-        height: 42px;
-        margin-top: -14px;
-      }
-      .album__content-list__list__item__left__img {
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-      } //album__content-list__list__item__left__img--END--
-      .time {
-        position: absolute;
-        bottom: 16px;
-        left: 16px;
-        padding: 4px 10px;
-
-        border-radius: 12px;
-        background: var(--Color-03, #222);
-        box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.15);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        strong{
-          color: #fff;
-          text-align: center;
-          font-family: Inter400;
-          font-size: 12px;
-          width: 26px;
+        border-radius: 16px;
+        background: #222;
+        width: 160px;
+        height: 160px;
+        padding: 10px;
+        position: relative;
+        .album__content-list__list__item__left__play-btn {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 42px;
+            height: 42px;
+            margin-top: -14px;
         }
-      }
+        .album__content-list__list__item__left__img {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        } //album__content-list__list__item__left__img--END--
+        .time {
+            position: absolute;
+            bottom: 16px;
+            left: 16px;
+            padding: 4px 10px;
+
+            border-radius: 12px;
+            background: var(--Color-03, #222);
+            box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.15);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            strong {
+                color: #fff;
+                text-align: center;
+                font-family: Inter400;
+                font-size: 12px;
+                width: 26px;
+            }
+        }
     } //album__content-list__list__item__left--END--
 
     .album__content-list__list__item__right {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      // padding: 8px 0;
-      flex: 1;
-      .album__content-list__list__item__right__title {
-        color: var(--Text-music-title, #f1f1f1);
-        font-family: Inter400;
-        font-size: 14px;
-        font-style: normal;
-        text-align: left;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        word-break: break-word;
-        min-height: 34px;
-      } //album__content-list__list__item__right__title--END--
-      .album__content-list__list__item__right__love-play {
         display: flex;
-        align-items: start;
+        flex-direction: column;
         gap: 8px;
-        flex-direction: column;
-        img {
-          width: 14px;
-          height: 14px;
-        }
-        p {
-          &.play{
-            padding-left: 2px;
-          }
-          display: flex;
-          align-items: center;
-          gap: 4px;
-          color: var(--Text-music-sub, #aaa);
-          font-family: Inter400;
-          font-size: 12px;
-          font-style: normal;
-          line-height: 100%; /* 12px */
-          &:nth-child(2) {
-            img {
-              width: 16px;
-              height: 16px;
-            }
-          }
-        }
-      } //album__content-list__list__item__right__love-play--END--
-      .album__content-list__list__item__right__user {
-        display: flex;
-        align-items: start;
-        justify-content: space-between;
-        flex-direction: column;
-        gap: 18px;
-        .album__content-list__list__item__right__user__info {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 8px;
-          color: var(--Text-music-title, #f1f1f1);
-          font-family: Inter400;
-          font-size: 12px;
-          font-style: normal;
-          line-height: 100%; /* 12px */
-          letter-spacing: 0.36px;
-          img {
-            width: 24px;
-            height: 24px;
-            object-fit: cover;
-            border-radius: 100%;
+        // padding: 8px 0;
+        flex: 1;
+        .album__content-list__list__item__right__title {
+            color: var(--Text-music-title, #f1f1f1);
+            font-family: Inter400;
+            font-size: 14px;
+            font-style: normal;
+            text-align: left;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             overflow: hidden;
-          }
-        } //album__content-list__list__item__right__user__info--END--
-        .album__content-list__list__item__right__user__btn {
-          width: 100%;
-          height: 24px;
-          background: #cf0;
-          position: relative;
-          top: 0;
-          transition: 0.2s;
-          color: var(--Text-dark-title, #1a1a1a);
-          font-family: Orbitron600;
-          font-size: 12px;
-          font-style: normal;
-          line-height: normal;
-          border-radius: 8px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 4px;
-            width: calc(100% - 2px);
-            transition: 0.2s;
-            border-radius: 8px;
-            height: 23px;
-            border: 1px solid #cf0;
-          }
-          &:hover {
-            top: 4px;
-            &::before {
-              top: 0;
+            text-overflow: ellipsis;
+            word-break: break-word;
+            min-height: 34px;
+        } //album__content-list__list__item__right__title--END--
+        .album__content-list__list__item__right__love-play {
+            display: flex;
+            align-items: start;
+            gap: 8px;
+            flex-direction: column;
+            img {
+                width: 14px;
+                height: 14px;
             }
-          }
-          // width: 24px;
-          // height: 24px;
-          // font-size: 0;
-          // background: url('../assets/images/album/more-icon.svg') center no-repeat;
-          // background-size: contain;
-        } //album__content-list__list__item__right__user__btn--END--
-      } //album__content-list__list__item__right__user--END--
+            p {
+                &.play {
+                    padding-left: 2px;
+                }
+                display: flex;
+                align-items: center;
+                gap: 4px;
+                color: var(--Text-music-sub, #aaa);
+                font-family: Inter400;
+                font-size: 12px;
+                font-style: normal;
+                line-height: 100%; /* 12px */
+                &:nth-child(2) {
+                    img {
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+            }
+        } //album__content-list__list__item__right__love-play--END--
+        .album__content-list__list__item__right__user {
+            display: flex;
+            align-items: start;
+            justify-content: space-between;
+            flex-direction: column;
+            gap: 18px;
+            .album__content-list__list__item__right__user__info {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
+                color: var(--Text-music-title, #f1f1f1);
+                font-family: Inter400;
+                font-size: 12px;
+                font-style: normal;
+                line-height: 100%; /* 12px */
+                letter-spacing: 0.36px;
+                img {
+                    width: 24px;
+                    height: 24px;
+                    object-fit: cover;
+                    border-radius: 100%;
+                    overflow: hidden;
+                }
+            } //album__content-list__list__item__right__user__info--END--
+            .album__content-list__list__item__right__user__btn {
+                width: 100%;
+                height: 24px;
+                background: #cf0;
+                position: relative;
+                top: 0;
+                transition: 0.2s;
+                color: var(--Text-dark-title, #1a1a1a);
+                font-family: Orbitron600;
+                font-size: 12px;
+                font-style: normal;
+                line-height: normal;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 4px;
+                    width: calc(100% - 2px);
+                    transition: 0.2s;
+                    border-radius: 8px;
+                    height: 23px;
+                    border: 1px solid #cf0;
+                }
+                &:hover {
+                    top: 4px;
+                    &::before {
+                        top: 0;
+                    }
+                }
+                // width: 24px;
+                // height: 24px;
+                // font-size: 0;
+                // background: url('../assets/images/album/more-icon.svg') center no-repeat;
+                // background-size: contain;
+            } //album__content-list__list__item__right__user__btn--END--
+        } //album__content-list__list__item__right__user--END--
     } //album__content-list__list__item__right--END-
-  } //album__content-list__list__item--END--
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+} //album__content-list__list__item--END--
