--- a/src/components/create/LyricLab.scss
+++ b/src/components/create/LyricLab.scss
@@ -5,6 +5,7 @@
     resize: none;
     min-height: 600px;
     max-height: 100%;
+    white-space: break-spaces;
     // overflow: auto;
     // overflow: ;
     &textarea {
@@ -46,7 +47,7 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       height: 100%;
@@ -102,7 +103,7 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       width: 100%;
       height: 100%;
