--- a/src/styles/MintNftSellDetail.scss
+++ b/src/styles/MintNftSellDetail.scss
@@ -20,6 +20,48 @@
   } //album-detail__title--END--
 
 
+  .sell-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    width: 200px;
+    height: 40px;
+    background: #6458FF;
+    position: relative;
+    top: 0;
+    transition: 0.2s;
+    color:#fff;
+    font-family: Orbitron600;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    border-radius: 12px;
+    margin:16px 0 0 0 ;
+    &::before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 4px;
+        width: calc(100% - 2px);
+        transition: 0.2s;
+        border-radius: 12px;
+        height: 38px;
+        border: 1px solid #6458FF;
+    }
+    &:hover{
+        top: 4px;
+        &::before{
+            top: 0;
+        }
+    }
+  }
+
+
+
+
+
+
 
   .level-quantity-box{
     width: 100%;
@@ -34,10 +76,10 @@
       dt{
         color: var(--primary-base, #CF0);
         font-family: Orbitron400;
-        font-size: 10px;
+        font-size: 16px;
         font-style: normal;
         line-height: normal;
-        margin-bottom: 10px;
+        margin-bottom: 16px;
       }
       dd{
         color: var(--Text-music-title, #F1F1F1);
@@ -51,10 +93,36 @@
         font-family: Inter400;
         font-size: 14px;
         font-style: normal;
+        justify-content: space-between;
         img{
           width: 24px;
           height: 24px;
           object-fit: cover;
+        }
+        p{
+          color:#F1F1F1;
+          font-family: Orbitron400;
+          font-size: 16px;
+          font-style: normal;
+          span{
+            color:#AAA;
+            font-family: Orbitron400;
+            font-size: 16px;
+            font-style: normal;
+          }
+        }
+        .mic{
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          img{
+            width: 20px;
+            height: 20px;
+            object-fit: cover;
+          }
+          color: var(--Text-music-title, #F1F1F1);
+          font-family: Orbitron400;
+          font-size: 16px;
         }
         &.quantity{
           display: flex;
@@ -63,15 +131,21 @@
           p{
             color: var(--Text-music-sub, #AAA);
             font-family: Orbitron400;
-            font-size: 12px;
+            font-size: 14px;
+
           }
         }
       }
     }//level-quantity-box__dl--END--
   }//level-quantity-box--END--
 
+  .sell-nft-input-box__cover{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
   .sell-nft-input-box{
-    width: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -135,7 +209,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-
+    flex: 1;
+    
     .sell-nft-select-box__title{
       color: var(--Color-10, #FFF);
       font-family: Orbitron400;
@@ -1416,11 +1491,15 @@
 }
 
 @media screen and (max-width: 768px) {
+  
   .mint-detail {
     .album-detail__title {
       dt {
         font-size: 24px;
       }
+    }
+    .level-quantity-box{
+      flex-direction: column;
     }
     .filter-create{
       flex-direction: column;
