--- a/src/styles/NftItemDetail.scss
+++ b/src/styles/NftItemDetail.scss
@@ -577,27 +577,27 @@
                         color: var(--secondary-base, #00FFB3);
                         text-align: center;
                         font-family: Orbitron500;
-                        font-size: 18px;
+                        font-size: 24px;
                         font-style: normal;
                     }
                     dd{
                         color: var(--Text-music-title, #F1F1F1);
                         text-align: center;
                         font-family: Inter700;
-                        font-size: 24px;
+                        font-size: 36px;
                         font-style: normal;
                         line-height: normal;
                         display: flex;
                         align-items: center;
-                        gap: 4px;
+                        gap: 8px;
                         position: relative;
                         span{
-                            position: absolute;
-                            top: 8px;
-                            left: -52px;
+                            // position: absolute;
+                            // top: 8px;
+                            // left: -52px;
                             color: var(--Dark-Color-07, var(--Color-07, #A3A3A3));
                             font-family: Inter500;
-                            font-size: 12px;
+                            font-size: 18px;
                             font-style: normal;
                         }
                     }
