--- a/src/components/table/TableCompositions.scss
+++ b/src/components/table/TableCompositions.scss
@@ -1,9 +1,15 @@
+.table__wrapper {
+  border: 1px solid #222;
+  border-radius: 12px;
+}
+
 .table {
   border-radius: 12px;
   border: 1px solid #222;
   border-spacing: 0;
   table-layout: auto;
   width: auto;
+  width: 100%;
 }
 
 .table__thead {
@@ -90,6 +96,7 @@
     position: relative;
     top: 0px;
     transition: 0.2s all;
+    text-transform: capitalize;
 
     &:hover {
       top: 4px;
@@ -120,32 +127,60 @@
     &.delete {
       color: #f1f1f1;
       background-color: #44000d;
+      &::before {
+        border-color: #44000d;
+      }
     }
     &.follow {
       color: #f1f1f1;
       background-color: #003321;
+      &::before {
+        border-color: #003321;
+      }
     }
     &.following {
       color: #f1f1f1;
       background-color: #171816;
+      &::before {
+        border-color: #171816;
+      }
     }
 
     &.unfollow {
       color: #f1f1f1;
       background-color: #44000d;
+      &::before {
+        border-color: #44000d;
+      }
     }
 
     &.sold {
       color: #1a1a1a;
       background-color: #cf0;
+      &::before {
+        border-color: #cf0;
+      }
     }
     &.sell {
       color: #1a1a1a;
       background-color: #5a9bf6;
+      &::before {
+        border-color: #5a9bf6;
+      }
     }
     &.mint {
       color: #1a1a1a;
       background-color: #00d293;
+      &::before {
+        border-color: #00d293;
+      }
+    }
+    &.cancel {
+      color: #1a1a1a;
+      background-color: #df1919;
+      &::before {
+        border-color: #df1919;
+      }
     }
   }
 
