--- a/src/components/table/TableCompositions.scss
+++ b/src/components/table/TableCompositions.scss
@@ -302,13 +302,13 @@
   }
   .type {
     margin: 0 auto;
-    width: 18px;
-    border-radius: 100%;
-    background-color: #222;
+    width: 22px;
+    // border-radius: 100%;
+    // background-color: #222;
     padding: 2px;
     img {
-      width: 14px;
-      height: 14px;
+      width: 22px;
+      height: 22px;
       object-fit: cover;
     }
   }
