--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -34,11 +34,6 @@
       justify-content: space-between;
       align-items: center;
       align-self: stretch;
-      color: var(--White, #fff);
-      font-family: Pretendard700;
-      font-size: 20px;
-      font-style: normal;
-      line-height: 30px; /* 150% */
 
       // padding: 17px;
       // text-align: center;
@@ -48,6 +43,22 @@
       // font-size: 20px;
       // font-style: normal;
       // line-height: 30px;
+      .modal-title {
+        color: var(--White, #fff);
+        font-family: Pretendard700;
+        font-size: 20px;
+        font-style: normal;
+        line-height: 30px; /* 150% */
+        font {
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
+        }
+      }
 
       .modal-close {
         // position: absolute;
@@ -60,23 +71,45 @@
         cursor: pointer;
       }
     }
-    .modal-title {
-      color: #f1f1f1;
-      font-size: 20px;
-      font-family: Pretendard600;
-      font {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
+    .modal-content {
+      // padding: 20px;
+      // padding-top: 0px;
+      margin: 16px 0px 16px 0px;
+      width: 100%;
+      height: auto;
+      overflow-y: scroll;
+      color: #fff;
+      font-family: Pretendard400;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 22px; /* 157.143% */
+      &::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Opera용 */
       }
     }
-    .modal-content {
-      padding: 20px;
-      padding-top: 0px;
+    .modal-btn {
+      display: flex;
+      padding: 12px 16px;
+      align-items: center;
+      gap: 12px;
+      align-self: stretch;
+      border-radius: 12px;
+      border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+      background: var(--White-05, rgba(255, 255, 255, 0.05));
+
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 1;
+      align-self: stretch;
+
+      overflow: hidden;
+      color: var(--White, #fff);
+      text-align: center;
+      text-overflow: ellipsis;
+      font-family: Pretendard400;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 22px; /* 157.143% */
     }
   }
 }
