--- a/src/styles/AccountSettings.scss
+++ b/src/styles/AccountSettings.scss
@@ -70,8 +70,10 @@
           margin-bottom: 8px;
           z-index: 1;
           img {
-            width: 160px;
-            height: 160px;
+            width: 100%;
+            height: 100%;
+            max-width: 160px;
+            max-height: 160px;
             flex-shrink: 0;
             border-radius: 50%;
             object-fit: cover;
@@ -79,14 +81,17 @@
           .picture-box__edit-btn {
             position: absolute;
             bottom: 0;
-            left: 50%;
-            background-color:#222;
+            left: 70%;
+            background-color: #383838;
+            border: 1px solid #d9d9d9;
             border-radius: 50%;
             padding: 8px;
             cursor: pointer;
             img {
-              width: 24px;
-              height: 24px;
+              width: 100%;
+              max-width: 20px !important;
+              display: block;
+              border-radius: 0;
             }
           }
         }
@@ -132,40 +137,27 @@
         width: 100%;
         height: 170px;
         border-radius: 4px;
-        border: 1px solid #222;
         background: #1a1a1a;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        display: flex;
+        align-items: flex-end;
 
         margin-bottom: 8px;
         .background-box__edit-btn {
           display: flex;
-          padding: 8px 16px;
+          padding: 8px;
           justify-content: center;
           align-items: center;
-          gap: 8px;
-          border-radius: 4px;
-          background:#272727;
+          border-radius: 50%;
+          background-color:#383838;
           margin-left: auto;
           width: fit-content;
           cursor: pointer;
-          img {
-            margin-right: 8px;
-          }
-          span {
-            color: #fff;
-            font-size: 14px;
-            font-style: normal;
-            font {
-              font-family:  inherit !important;
-              font-size: inherit !important;
-              font-weight: inherit !important;
-              line-height: inherit !important;
-              font-style: inherit !important;
-              color: inherit !important;
-              letter-spacing: inherit !important;
-            }
+          img{
+            width: 100%;
+            max-height: 24px;
           }
         }
       }
